# MEGC2026

./: .gitignore  CHECKPOINT.md  LICENSE  README.md  RESULTS_SUMMARY.md  __init__.py  calibration.py  config.py  evaluation.py  inference.py  knowledge.py  local_pipeline.py  numeric_features.py  pyproject.toml
scripts/: export_casme2_samm_motion_features.py  generate_testset_flow_from_crops.py  generate_trainset_flow.py
src/flow_preprocess/: __init__.py  utils.py
src/flow_preprocess/flow/: __init__.py  optical_flow_export.py
src/flow_preprocess/io/: video_or_frames_loader.py
src/flow_preprocess/preprocess/: __init__.py  face_crop_align.py
src/flow_preprocess/trainset/: __init__.py  trainset_sample_resolver.py
src/local_vllm_batch_runner/: __init__.py  __main__.py  batch_runner.py  calibration.py  config.py  datasets.py  formatting.py  inference.py  knowledge.py  numeric_features.py
