[project]
name = "local-vllm-batch-runner"
version = "0.1.0"
description = "Local vLLM batch runners for CASME2, SAMM, and MEGC test set."
requires-python = ">=3.10"
dependencies = [
  "mediapipe",
  "numpy",
  "opencv-python",
  "pillow",
  "transformers",
  "vllm",
]

[project.scripts]
local-vllm-batch-runner = "local_vllm_batch_runner.batch_runner:main"
local-vllm-evaluate = "local_vllm_batch_runner.evaluation:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
